# Noosphere

./: .env.example  .gitignore  LICENSE  MEMORY.md  README.md  pyproject.toml
backend/: analyzer.py  cache.py  celery_app.py  context_builder.py  db.py  exporter.py  extractor.py  llm.py  main.py  ontology_builder.py  reporter.py  tasks.py
backend/cloud/: __init__.py  billing.py
backend/simulation/: agent.py  graph_utils.py  models.py  persona_generator.py  persona_selector.py  rate_limiter.py  social_rounds.py  social_runner.py  taxonomy.py
backend/simulation/data/: agent_pool.json
backend/sources/: gdelt.py
backend/tests/: test_checkpoint.py  test_final_report.py  test_reporter.py  test_simulation_api.py  test_simulation_taxonomy_and_report.py  test_social_runner_restore.py
docs/superpowers/plans/: 2026-03-21-landing-page-demo-redesign.md  2026-03-21-multi-provider-llm.md  2026-03-21-source-visibility.md  2026-03-23-mobile-responsive.md
docs/superpowers/specs/: 2026-03-21-landing-page-demo-redesign.md  2026-03-21-multi-provider-llm-design.md  2026-03-21-ontology-injection-design.md  2026-03-21-source-visibility-design.md  2026-03-22-simulation-checkpoint-resume-design.md  2026-03-23-mobile-responsive-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  constants.ts  index.css  tokens.ts  types.ts
frontend/src/cloud/: analytics.ts
frontend/src/components/: CreditModal.tsx  CreditsDisplay.tsx  DetailsView.tsx  Header.tsx  HistorySidebar.tsx  LandingDemoWindow.tsx  MarkdownView.tsx  OntologyGraph.tsx  PersonaCardView.tsx  PlatformSimFeed.tsx  ReportView.tsx  SimulationAnalytics.tsx  SocialFeedView.tsx  SourcesView.tsx  TopPosts.tsx
i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
tests/: conftest.py  test_cloud_billing.py  test_cloud_webhooks.py  test_context_builder.py  test_extractor.py  test_llm.py  test_main_config.py  test_ontology_builder.py  test_social_rounds.py  test_social_runner.py  test_tpm_rate_limiter.py
(+17 files in other folders)
